--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -7,14 +7,28 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/post_title"
-        android:layout_width="wrap_content"
+    <!--<HorizontalScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@+id/post_score"
-        android:layout_alignParentTop="true"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        />
+        android:id="@+id/horizontalScrollView"
+        android:scrollbars="none">-->
+
+
+        <TextView
+            android:id="@+id/post_title"
+            android:text="@+id/post_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="3"
+            android:ellipsize="end"
+
+            android:clickable="true"
+            android:layout_alignParentTop="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+             />
+    <!--</HorizontalScrollView>-->
+    <!--android:scrollHorizontally="true"-->
+
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -28,7 +42,10 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_alignBottom="@+id/post_score"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:ellipsize="start"
+            android:maxLines="2" />
+
 
         <TextView
             android:id="@+id/post_score"
