--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -8,7 +8,8 @@
     <ListView
         android:id="@+id/commentsList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        >
     </ListView>
 
 </RelativeLayout>
