--- a/app/src/main/res/layout/posts.xml
+++ b/app/src/main/res/layout/posts.xml
@@ -8,7 +8,8 @@
     <ListView
         android:id="@+id/posts_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:clickable="true">
     </ListView>
 
 </RelativeLayout>
