Fixed Crash on onClick!! View Posts Created activity for comments cannot open comment activity yet
Signed-off-by: JDreamms <1409135@rgu.ac.uk>

--- a/app/src/main/res/layout/comments.xml
+++ b/app/src/main/res/layout/comments.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="50dp"
-    tools:context="com.example.david.reddit_android.LoginActivity">
+    tools:context="com.example.david.reddit_android.">
 
 
 
