--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".CommentActivity" >
+
 
 
 
@@ -20,29 +21,32 @@
         />
 
 
-
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="120dp" >
+        android:layout_height="120dp"
+        android:paddingTop="18dp">
+
+
 
         <TextView
             android:id="@+id/htmlText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_alignBottom="@+id/points"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:clickable="true"
+            android:paddingBottom="10dp"
             />
 
 
         <TextView
+
             android:id="@+id/points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
@@ -52,8 +56,7 @@
             android:id="@+id/postedOn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:textAppearance="?android:attr/textAppearanceSmall"
             />
